
########### install files ###############

install(FILES  logout.png 	firefox.svg DESTINATION ${pkgdatadir}/themes/_default_/icons )



#original Makefile.am contents follow:

#iconsdir = ${pkgdatadir}/themes/_default_/icons
#
#icons_DATA = \
#	logout.png\
#	firefox.svg
#
#EXTRA_DIST = $(icons_DATA)
#
