iconsdir = $(pkgdatadir)/themes/_default_/icons

icons_DATA = \
	background-cairo-dock.svg\
	bmp.svg\
	epiphany.svg\
	firefox-3.0.svg\
	firefox.svg\
	gnome-terminal.svg\
	konsole.svg\
	logout.svg\
	mozilla-thunderbird.svg\
	nautilus.svg\
	opera.svg\
	terminal.svg\
	transmission.png\
	web-browser.svg\
	xfce4-terminal.svg

EXTRA_DIST = $(icons_DATA)

