add_subdirectory(Animated-icons)
add_subdirectory(clock)
add_subdirectory(dialog-rendering)
add_subdirectory(dustbin)
add_subdirectory(GMenu)
add_subdirectory(icon-effect)
add_subdirectory(illusion)
add_subdirectory(logout)
add_subdirectory(rendering)
add_subdirectory(shortcuts)
add_subdirectory(showDesktop)
add_subdirectory(switcher)


########### install files ###############




#original Makefile.am contents follow:

#SUBDIRS = . Animated-icons\
#	clock\
#	dialog-rendering\
#	dustbin\
#	GMenu\
#	icon-effect\
#	illusion\
#	logout\
#	rendering\
#	shortcuts\
#	showDesktop\
#	switcher
