themedir = $(pkgdatadir)/gauges/tomato

theme_DATA = \
	background.svg\
	tomato0.svg\
	tomato5.svg\
	tomato10.svg\
	tomato15.svg\
	tomato20.svg\
	tomato25.svg\
	tomato30.svg\
	tomato35.svg\
	tomato40.svg\
	tomato45.svg\
	tomato50.svg\
	tomato55.svg\
	tomato60.svg\
	tomato65.svg\
	tomato70.svg\
	tomato75.svg\
	tomato80.svg\
	tomato85.svg\
	tomato90.svg\
	tomato95.svg\
	tomato100.svg\
	theme.xml\
	readme

EXTRA_DIST = $(theme_DATA)
