
########### install files ###############

install(FILES  Animated-icons.conf DESTINATION ${pkgdatadir}/themes/_default_/plug-ins/Animated-icons )



#original Makefile.am contents follow:

#appletdir = ${pkgdatadir}/themes/_default_/plug-ins/Animated-icons
#
#applet_DATA = \
#	Animated-icons.conf
#
#EXTRA_DIST = $(applet_DATA)
#
