
########### install files ###############

install(FILES  dialog-rendering.conf DESTINATION ${pkgdatadir}/themes/_default_/plug-ins/dialog-rendering )



#original Makefile.am contents follow:

#appletdir = ${pkgdatadir}/themes/_default_/plug-ins/dialog-rendering
#
#applet_DATA = \
#	dialog-rendering.conf
#
#EXTRA_DIST = $(applet_DATA)
#
