
########### install files ###############

install(FILES  icon-effect.conf DESTINATION ${pkgdatadir}/themes/_default_/plug-ins/icon-effect )



#original Makefile.am contents follow:

#appletdir = ${pkgdatadir}/themes/_default_/plug-ins/icon-effect
#
#applet_DATA = \
#	icon-effect.conf
#
#EXTRA_DIST = $(applet_DATA)
#
